# earlybird

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
earlybird/: admin_api.py  api.py  auth.py  backfill.py  build_daily_feed.py  config.py  map_api.py  models.py  scraper.py
earlybird/map/: build_map.py  cluster.py  connections.py  embedder.py  geojson.py  labels.py  layout.py  regions.py  taxonomy.py
earlybird/pipeline/: __init__.py  dedup.py  filter.py  semantic_dedup.py
earlybird/sources/: __init__.py  arxiv.py  base.py  hackernews.py  hf_papers.py  hf_trending.py  pwc.py  registry.py  rss.py  semantic_scholar.py
frontend/: app.js  index.html  panel.js  search.js  style.css
frontend/admin/: index.html
skills/earlybird/: SKILL.md
skills/earlybird/references/: cron.md  scoring.md  sources.md
