[project]
name = "earlybird"
version = "0.1.0"
description = "AI/tech content radar — scrape, filter, deliver"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
earlybird-scrape = "earlybird.scraper:main"
earlybird-feed = "earlybird.build_daily_feed:main"
